--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,10 +30,33 @@ dependencies:
   flutter:
     sdk: flutter
 
+  flutter_localizations:
+    sdk: flutter
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  # Core
+  equatable: ^2.0.3
+
+  # Network
+  dio: ^4.0.6
+  connectivity_plus: ^2.3.0
+
+  # https://pub.dev/packages/awesome_dio_interceptor
+  # https://pub.dev/packages/pretty_dio_logger
+
+  # System
+  url_launcher: ^6.1.0
+  path_provider: ^2.0.9
+  open_file: ^3.2.1
+
+  # Store
+  sp_util: ^2.0.3
+
+  # UI
+  gap: ^2.0.0
+  assorted_layout_widgets: ^5.5.0
+  cached_network_image: ^3.2.1
+
+  # device_preview: ^1.1.0
 
 dev_dependencies:
   flutter_test:
@@ -46,6 +69,8 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
 
+  # https://pub.dev/packages/build_runner
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
@@ -57,10 +82,10 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/fonts/
+    - assets/images/
+    - assets/icons/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -74,6 +99,16 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   # fonts:
+  #   - family: Roboto
+  #     fonts:
+  #       - asset: assets/fonts/Roboto-Light.ttf
+  #         weight: 300
+  #       - asset: assets/fonts/Roboto-Regular.ttf
+  #         weight: 400
+  #       - asset: assets/fonts/Roboto-Medium.ttf
+  #         weight: 500
+  #       - asset: assets/fonts/Roboto-Bold.ttf
+  #         weight: 700
   #   - family: Schyler
   #     fonts:
   #       - asset: fonts/Schyler-Regular.ttf
@@ -87,3 +122,6 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+# https://pub.dev/packages/derry
+scripts: derry.yaml
